# stellar-dapp

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
src/: App.jsx  main.jsx
src/components/: Balance.jsx  ContractCall.jsx  SendTransaction.jsx  WalletConnect.jsx
src/stellar/: sorobanConfig.js  stellarConfig.js
src/wallet/: stellarWalletsKit.js
