[package]
name = "increment-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "25.1"

[dev-dependencies]
soroban-sdk = { version = "25.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true
